--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "asymmetric-crypto": "^1.0.2",
     "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.1.1",
-    "elliptic": "^6.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "shamir": "^0.7.1",
