--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "terser-webpack-plugin": "5.1.1",
     "util": "0.12.3",
     "webpack": "5.24.4",
-    "webpack-cli": "4.5.0",
+    "webpack-cli": "4.9.0",
     "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
@@ -41,6 +41,7 @@
   "dependencies": {
     "asymmetric-crypto": "^1.0.2",
     "crypto-browserify": "^3.12.0",
+    "mathjs": "^9.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "shamir": "^0.7.1",
