--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.10.0",
-    "@dfinity/candid": "0.10.0",
-    "@dfinity/principal": "0.10.0",
+    "@dfinity/agent": "0.9.2",
+    "@dfinity/candid": "0.9.2",
+    "@dfinity/principal": "0.9.2",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
@@ -39,6 +39,10 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/auth-client": "^0.9.2",
+    "@dfinity/authentication": "^0.9.2",
+    "@dfinity/identity": "^0.9.2",
+    "lit-html": "^1.4.1",
     "asymmetric-crypto": "^1.0.2",
     "crypto-browserify": "^3.12.0",
     "mathjs": "^9.5.1",
