--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
     "@dfinity/auth-client": "^0.9.2",
     "@dfinity/authentication": "^0.9.2",
     "@dfinity/identity": "^0.9.2",
-    "lit-html": "^1.4.1",
     "asymmetric-crypto": "^1.0.2",
     "crypto-browserify": "^3.12.0",
+    "file-loader": "^6.2.0",
+    "lit-html": "^1.4.1",
     "mathjs": "^9.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "shamir": "^0.7.1",
     "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1"
   }
 }
