--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "asymmetric-crypto": "^1.0.2",
     "crypto-browserify": "^3.12.0",
     "file-loader": "^6.2.0",
+    "js-sha256": "^0.9.0",
     "lit-html": "^1.4.1",
     "mathjs": "^9.5.1",
     "react": "^17.0.2",
