--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run copy:types",
-    "start": "webpack serve --mode development --env development",
+    "start": "webpack serve --mode production --env production",
     "prestart": "npm run copy:types",
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "^0.9.2",
     "@dfinity/candid": "^0.9.2",
-    "@dfinity/principal": "^0.9.2",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
@@ -39,10 +37,13 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/agent": "^0.9.3",
     "@dfinity/auth-client": "^0.9.2",
     "@dfinity/authentication": "^0.9.2",
     "@dfinity/identity": "^0.9.2",
+    "@dfinity/principal": "^0.9.3",
     "asymmetric-crypto": "^1.0.2",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "file-loader": "^6.2.0",
     "js-sha256": "^0.9.0",
