--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "lib": ["ES2018", "DOM"],  /* Specify library files to be included in the compilation. */
       "allowJs": true,           /* Allow javascript files to be compiled. */
       "jsx": "react",            /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+      "moduleResolution": "node"
     },
     "include": ["src/**/*"],
 }
